--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -10,7 +10,8 @@
   --global-theme-color: #{$purple-color};
   --global-hover-color: #{$purple-color};
   --global-hover-text-color: #{$white-color};
-  --global-footer-bg-color: #{$grey-color-dark};
+  // --global-footer-bg-color: #{$grey-color-dark};
+  --global-footer-bg-color: #{$grey-color};
   --global-footer-text-color: #{$grey-color-light};
   --global-footer-link-color: #{$white-color};
   --global-distill-app-color: #{$grey-color};
@@ -57,7 +58,8 @@ html[data-theme='dark'] {
   --global-hover-text-color: #{$white-color};
   --global-footer-bg-color: #{$grey-color-light};
   --global-footer-text-color: #{$grey-color-dark};
-  --global-footer-link-color: #{$black-color};
+  // --global-footer-link-color: #{$black-color};
+  --global-footer-link-color: #{$grey-color-light};
   --global-distill-app-color: #{$grey-color-light};
   --global-divider-color: #424246;
   --global-card-bg-color: #{$grey-900};
