--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -24,6 +24,7 @@ $yellow-color:        #efcc00 !default;
 
 $grey-color:          #828282 !default;
 $grey-color-light:    lighten($grey-color, 40%);
+$grey-color-lighter:    lighten($grey-color, 60%);
 $grey-color-dark:     #1C1C1D;
 $grey-900:            #212529;
 
