--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -114,14 +114,12 @@ blockquote {
 }
 
 // Math
-
 .equation {
   margin-bottom: 1rem;
   text-align: center;
 }
 
 // Caption
-
 .caption {
   font-size: 0.875rem;
   margin-top: 0.75rem;
@@ -130,7 +128,6 @@ blockquote {
 }
 
 // Card
-
 .card {
   background-color: var(--global-card-bg-color);
 
@@ -154,14 +151,12 @@ blockquote {
 }
 
 // Citation
-
 .citation,
 .citation-number {
   color: var(--global-theme-color);
 }
 
 // Profile
-
 .profile {
   width: 70%;
 
@@ -214,7 +209,6 @@ blockquote {
 
 
 // Navbar customization
-
 .navbar {
   box-shadow: none;
   border-bottom: 1px solid var(--global-divider-color);
@@ -280,7 +274,8 @@ blockquote {
   .navbar-brand.social {
     padding-bottom: 0;
     padding-top: 0;
-    font-size: 1.7rem;
+    padding-right: 20px;  // spacing between logos
+    font-size: 1.4rem; // size of logos
 
     a {
       i::before {
@@ -349,7 +344,6 @@ blockquote {
 }
 
 // Social (bottom)
-
 .social {
   text-align: center;
 
@@ -437,7 +431,6 @@ footer.sticky-bottom {
 }
 
 // CV
-
 .cv {
   margin-bottom: 40px;
 
@@ -464,7 +457,6 @@ footer.sticky-bottom {
 }
 
 // Repositories
-
 @media (min-width: 768px) {
   .repo {
     max-width: 50%;
@@ -472,7 +464,6 @@ footer.sticky-bottom {
 }
 
 // Blog
-
 .header-bar {
   border-bottom: 1px solid var(--global-divider-color);
   text-align: center;
@@ -572,7 +563,6 @@ footer.sticky-bottom {
 
 
 // Distill
-
 .distill {
   a:hover {
     border-bottom-color: var(--global-theme-color);
@@ -582,7 +572,6 @@ footer.sticky-bottom {
 
 
 // Projects
-
 .projects {
   a {
     text-decoration: none;
@@ -678,8 +667,7 @@ footer.sticky-bottom {
           display: inline-block;
           background-color: var(--global-theme-color);
           color: var(--global-bg-color)!important;
-          padding-left: 1rem;
-          padding-right: 1rem;
+          padding: 0.5rem;
 
           a {
             color: white;
