chaning layout of links and buttons

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -735,21 +735,43 @@ footer.sticky-bottom {
       }
 
       .links {
+        width: 6.3rem;
+        padding-left: -2rem;
         a.btn {
+          margin-left: -0.0rem;
+          margin-right: -0.1rem;
+          margin-bottom: -0.2rem;
           color: var(--global-text-color);
+          // background-color: var(--global-button-bg-color);
           border: 1px solid var(--global-text-color);
-          padding-left: 1rem;
-          padding-right: 1rem;
-          padding-top: 0.25rem;
-          padding-bottom: 0.25rem;
-          margin-left: 0;
-
+          padding-left: 0.25rem;
+          padding-right: 0.25rem;
+          padding-top: 0.1rem;
+          padding-bottom: 0.1rem;
+          font-size: 0.6rem;
           &:hover {
             color: var(--global-theme-color);
             border-color: var(--global-theme-color);
           }
         }
       }
+
+      // .links {
+      //   a.btn {
+      //     color: var(--global-text-color);
+      //     border: 1px solid var(--global-text-color);
+      //     padding-left: 1rem;
+      //     padding-right: 1rem;
+      //     padding-top: 0.25rem;
+      //     padding-bottom: 0.25rem;
+      //     margin-left: 0;
+
+      //     &:hover {
+      //       color: var(--global-theme-color);
+      //       border-color: var(--global-theme-color);
+      //     }
+      //   }
+      // }
 
       .badges {
         padding-bottom: 0.5rem;
@@ -848,6 +870,8 @@ html.transition *:after {
 
 // Extra Markdown style (post Customization)
 .post {
+  // margin-left: auto;
+  // margin-right: auto;
   .post-meta {
     color: var(--global-text-color-light);
     font-size: 0.875rem;
