--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -2,8 +2,8 @@
 ---
 <!-- _layouts/bib.html -->
       <div class="row">
-        <!-- <div class="col col-sm-2 {% if entry.preview %}preview{% else %}abbr{% endif %}"> -->
-        <div class="col col-sm-2 abbr">
+        {%- if site.enable_publication_thumbnails -%}
+        <div class="col-sm-2 {% if entry.preview %}preview{% else %}abbr{% endif %}">
         {%- if entry.preview -%}
           {% if entry.preview contains '://' -%}
           <img class="preview z-depth-1 rounded" src="{{ entry.preview }}">
@@ -12,9 +12,10 @@
             {% include figure.html
             path=entry_path
             class="preview z-depth-1 rounded"
+            zoomable=false
             alt=entry.preview -%}
           {%- endif -%}
-        {%- elsif entry.abbr -%} 
+        {%- elsif entry.abbr -%}
           {%- if site.data.venues[entry.abbr] -%}
             {%- assign venue_style = nil -%}
             {%- if site.data.venues[entry.abbr].color != blank -%}
@@ -26,21 +27,40 @@
           {%- endif -%}
         {%- endif -%}
         </div>
+        {%- endif -%}
 
         <!-- Entry bib key -->
-        <div id="{{entry.key}}" class="col col-sm-8">
+        <div id="{{entry.key}}" class="{% if site.enable_publication_thumbnails %}col-sm-8{% else %}col-sm-10{% endif %}">
         <!-- Title -->
         <div class="title">{{entry.title}}</div>
         <!-- Author -->
         <div class="author">
         {% assign author_array_size = entry.author_array | size %}
+        {% assign max_n_authors_entry = entry.max_author_limit |plus:0 %} 
+        <!-- {% assign nfa = entry.n_first_authors | plus: 2 %} -->
+        {% assign nfa = entry.n_first_authors | plus: 1 %}
+        
 
         {% assign author_array_limit = author_array_size %}
         {%- if site.max_author_limit and author_array_size > site.max_author_limit %}
           {% assign author_array_limit = site.max_author_limit %}
         {% endif %}
 
+        {%- if max_n_authors_entry>0 %}
+          {% assign author_array_limit = max_n_authors_entry %}
+        {% endif %}
+
+        {% assign author_idx=0 %}
+
         {%- for author in entry.author_array limit: author_array_limit -%}
+          {% assign author_idx=author_idx | plus: 1 %}
+
+          {%- if author_idx < nfa -%}
+            {%- assign special_text = "*" -%}
+          {%- else -%}
+            {%- assign special_text = "" -%}
+          {%- endif -%}
+
           {%- assign author_is_self = false -%}
           {%- assign author_last_name = author.last | remove: "¶" | remove: "&" | remove: "*" | remove: "†" | remove: "^" -%}
           {%- if site.scholar.last_name contains author_last_name -%}
@@ -63,12 +83,12 @@
             {%- if forloop.last and author_array_limit == author_array_size -%}and&nbsp;{%- endif -%}
           {%- endif -%}
           {%- if author_is_self -%}
-            <em>{{author.first}} {{author.last}}</em>
+            <em>{{author.first}} {{author.last}}{{special_text}}</em>
           {%- else -%}
             {%- if coauthor_url -%}
-              <a href="{{coauthor_url}}">{{author.first}} {{author.last}}</a>
+              <a href="{{coauthor_url}}">{{author.first}} {{author.last}}{{special_text}}</a>
             {%- else -%}
-              {{author.first}} {{author.last}}
+              {{author.first}} {{author.last}}{{special_text}}
             {%- endif -%}
           {%- endif -%}
         {%- endfor -%}
@@ -106,36 +126,40 @@
         {%- endif -%}
 
         </div>
-        
-    
+
         <!-- Journal/Book title and date -->
         {% assign proceedings = "inproceedings,incollection" | split: ','%}
         {% assign thesis = "thesis,mastersthesis,phdthesis" | split: ','%}
         {% if entry.type == "article" -%}
-        {%- capture entrytype -%}<em>{{entry.journal}}</em>{%- endcapture -%}
+          {%- capture entrytype -%}<em>{{entry.journal}}</em>{%- endcapture -%}
         {%- elsif proceedings contains entry.type -%}
-        {%- capture entrytype -%}<em>In {{entry.booktitle}}</em> {%- endcapture -%}
+          {%- capture entrytype -%}<em>In {{entry.booktitle}}</em> {%- endcapture -%}
         {%- elsif thesis contains entry.type -%}
-        {%- capture entrytype -%}<em>{{entry.school}}</em> {%- endcapture -%}
+          {%- capture entrytype -%}<em>{{entry.school}}</em> {%- endcapture -%}
         {%- else -%}
-        {%- capture entrytype -%}{%- endcapture -%}
+          {%- capture entrytype -%}{%- endcapture -%}
         {%- endif -%}
         {%- if entry.month -%}
-        {%- capture entrymonth -%}{{ " " }}{{ entry.month | capitalize }}{%- endcapture -%}
+          {%- capture entrymonth -%}{{ " " }}{{ entry.month | capitalize }}{%- endcapture -%}
         {%- endif -%}
         {%- if entry.year -%}
-        {%- capture entryyear -%}{{ " " }}{{entry.year}}{%- endcapture -%}
+          {%- capture entryyear -%}{{ " " }}{{entry.year}}{%- endcapture -%}
         {%- endif -%}
         {% assign entrytype_text = entrytype | strip_html | strip %}
         {%- capture periodical -%}{{ entrytype }}{%- if entrytype_text != "" and entryyear != "" -%}, {%- endif -%}{{ entrymonth }}{{ entryyear }}{%- endcapture -%}
-    
         <div class="periodical">
-        {{ periodical | strip }}
+          {{ periodical | strip }}
         </div>
         <div class="periodical">
-        {{ entry.note | strip }}
+          {{ entry.note | strip }}
         </div>
-        
+
+        {% if entry.award -%}
+        <div class="award">
+            <b>{{entry.award}}</b>
+        </div>
+        {%- endif %}
+
           <!-- Links/Buttons -->
           <div class="links">
           {%- if entry.abstract %}
@@ -170,13 +194,6 @@
           {%- if entry.code %}
             <a href="{{ entry.code }}" class="btn btn-sm z-depth-0" role="button">Code</a>
           {%- endif %}
-          {%- if entry.video %}
-            {% if entry.video contains '://' -%}
-            <a href="{{ entry.video }}" class="btn btn-sm z-depth-0" role="button">Video</a>
-            {%- else -%}
-            <a href="{{ entry.video | prepend: '/assets/video/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Video</a>
-            {%- endif %}
-          {%- endif %}
           {%- if entry.poster %}
             {% if entry.poster contains '://' -%}
             <a href="{{ entry.poster }}" class="btn btn-sm z-depth-0" role="button">Poster</a>
@@ -195,9 +212,12 @@
             <a href="{{ entry.website }}" class="btn btn-sm z-depth-0" role="button">Website</a>
           {%- endif %}
           </div>
-          {% if site.badges %}
+          {% if site.enable_publication_badges %}
+          {% assign entry_has_altmetric_badge = entry.altmetric or entry.doi or  entry.eprint or entry.pmid or entry.isbn %}
+          {% assign entry_has_dimensions_badge = entry.dimensions or entry.doi or entry.pmid %}
+          {% if entry_has_altmetric_badge or entry_has_dimensions_badge %}
           <div class="badges">
-            {%- if site.badges.altmetric_badge %}
+            {%- if site.enable_publication_badges.altmetric and entry_has_altmetric_badge %}
             <span class="altmetric-embed" data-hide-no-mentions="true" data-hide-less-than="15" data-badge-type="2" data-badge-popover="right"
               {% if entry.eprint %}
                 data-arxiv-id="{{ entry.eprint }}"
@@ -212,7 +232,7 @@
               {% endif %}
               ></span>
             {%- endif %}
-            {%- if site.badges.dimensions_badge %}
+            {%- if site.enable_publication_badges.dimensions and entry_has_dimensions_badge %}
               <span class="__dimensions_badge_embed__"
               {% if entry.doi %}
                 data-doi="{{ entry.doi }}"
@@ -224,6 +244,7 @@
               data-hide-zero-citations="true" data-style="small_rectangle" data-legend="hover-right" style="margin-bottom: 3px;"></span>
             {%- endif %}
           </div>
+          {%- endif %}
           {%- endif %}
 
           {% if entry.abstract -%}
