--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -11,6 +11,7 @@ $blue-color:          #0076df !default;
 $blue-color-dark:     #00369f !default;
 $cyan-color:          #2698BA !default;
 $light-cyan-color:    lighten($cyan-color, 25%);
+$ligher-cyan-color:   #A9DBB8!default;
 $green-color:         #00ab37 !default;
 $green-color-lime:    #B7D12A !default;
 $green-color-dark:    #009f06 !default;
