replaced url for MDB css. dark mode is broken? :/

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -3,12 +3,12 @@
  ******************************************************************************/
 
 // Typography
-@import url(//fonts.googleapis.com/css?family=Noto+Sans);
+// @import url(//fonts.googleapis.com/css?family=Noto+Sans);
 
-@font-face {
-  font-family: 'Noto Sans', sans-serif;
-  src: url(https://fonts.gstatic.com/s/notosans/v34/o-0IIpQlx3QUlC5A4PNr6DRASf6M7VBj.woff2) format('woff2');
-}
+// @font-face {
+//   font-family: 'Noto Sans', sans-serif;
+//   src: url(https://fonts.gstatic.com/s/notosans/v34/o-0IIpQlx3QUlC5A4PNr6DRASf6M7VBj.woff2) format('woff2');
+// }
 
 html {
   font-family: 'Noto Sans', sans-serif!important;
