made black and bg color darker

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -49,13 +49,13 @@ $grey-color-dark:     #363a4f;
 $grey-900:            #212529;
 
 $white-color: #cad3f5 !default;
-$black-color: #181926 !default;
+$black-color: #11111b !default;
 
 // Theme colors
 
 $code-bg-color-light:     rgba($purple-color, 0.05);
 //$code-bg-color-dark:      #2c3237 !default;
-$code-bg-color-dark:      #181926 !default;
+$code-bg-color-dark:      #11111b !default;
 
 // Font awesome location
 $fa-font-path: "../webfonts";
