--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -55,7 +55,7 @@ $black-color: #11111b !default;
 
 $code-bg-color-light:     rgba($purple-color, 0.05);
 //$code-bg-color-dark:      #2c3237 !default;
-$code-bg-color-dark:      #11111b !default;
+$code-bg-color-dark:      #181825 !default;
 
 // Font awesome location
 $fa-font-path: "../webfonts";
