changing themes to red

--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -56,10 +56,10 @@ html[data-theme='dark'] {
   --global-text-color: #{$grey-color-light};
   --global-text-color-light: #{$grey-color};
   --global-text-color-lighter: #{$grey-color-lighter};
-  --global-theme-color: #{$cyan-color};
-  --global-theme-color-light: #{$light-cyan-color};
-  --global-theme-color-lightest: #{$ligher-cyan-color};
-  --global-hover-color: #{$cyan-color};
+  --global-theme-color: #{$red-color};
+  --global-theme-color-light: #{$light-red-color};
+  --global-theme-color-lightest: #{$ligher-red-color};
+  --global-hover-color: #{$red-color};
   --global-hover-text-color: #{$white-color};
   --global-footer-bg-color: #{$grey-color-dark};
   --global-footer-text-color: #{$grey-color};
