--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -58,7 +58,7 @@ html[data-theme='dark'] {
   --global-text-color-lighter: #{$grey-color-lighter};
   --global-theme-color: #{$red-color};
   --global-theme-color-light: #{$light-red-color};
-  --global-theme-color-lightest: #{$ligher-red-color};
+  --global-theme-color-lightest: #{$lighter-red-color};
   --global-hover-color: #{$red-color};
   --global-hover-text-color: #{$white-color};
   --global-footer-bg-color: #{$grey-color-dark};
