--- a/_includes/scripts/mathjax.html
+++ b/_includes/scripts/mathjax.html
@@ -11,5 +11,5 @@
   <script defer type="text/javascript" id="MathJax-script" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/{{ site.mathjax.version }}/es5/tex-mml-chtml.min.js"></script>
   
 
-  <script defer src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script defer src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?version=4.8.0&features=es6></script>
   {%- endif %}
